syntax = "proto3";
package grpc;

service Activity {
    rpc GetProperties (ActivityGetPropertiesRq) returns (ActivityGetPropertiesRs);
    rpc SetProperties (ActivitySetPropertiesRs) returns (ActivityGetPropertiesRs);
    rpc CompleteActivity (ActivityCompleteActivityRq) returns (ActivityCompleteActivityRs);
}

message ActivityGetPropertiesRq {
    string ActivityKey = 1;
}

message ActivityGetPropertiesRs {
    string Key = 1;
    int32 State = 2;
    string Name = 3;
    string Description = 4;
    string ValidStates = 5;
    string InstanceKey = 6;
    string RemoteInstance = 7;
    int64 StartedDate = 8;
    int64 DueDate = 9;
}

message ActivitySetPropertiesRs {
    string Key = 1;
    int32 State = 2;
    string Name = 3;
    string Description = 4;
    string Data = 5;
}

message ActivityCompleteActivityRq {
    string Key = 1;
    string Option = 2;
}

message ActivityCompleteActivityRs {
}
